tests/snapshots/assets__check_file@unit-code-short-block-with-comment.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/short-block-with-comment.typ
snapshot_kind: text
---
#let o = {
  // comments
}

#let o = {
  // comments

}


#let o = {

  // comments

}

#let o = {
   /* comments */
}

#let o = {

   /* comments */

}

#let o = {   /* comments */

}

#let o = {

 /* comments */ }

#let o = {  /*
   comments
    */  }

#let o = {
   /* comments
 123
    */
}

#let o = {   /*
comments */
}

#let o = {   /* comments */  }

#let o = {
   /* comments */  }

#let o = {   /* comments */
}

#let a = { 543 }

#let a = { 543 /* something */ }

#let a = {
  543 // something
}

#let o = {
  666
  // comments
}

#let o = {
  // comments
  666
}

#let o = {
  // comments
  666
}

#let o = {
  666 // comments

}


#let o = {
  666
  // comments

}

#let o = {
  666

  // comments

}

#let o = {

  // comments
  666
}

#let o = { 666
   /* comments */
}

#let o = {
666   /* comments */
}

#let o = {
   /* comments */  666
}

#let o = {  666

   /* comments */

}

#let o = {

666   /* comments */

}

#let o = {

   /* comments */ 666

}

#let o = {  6666    /* comments */

}

#let o = {   /* comments */
    66666
}

#let o = { 6666

 /* comments    */ }

#let o = {
666
 /*    comments */   }

#let o = {

 /* comments */  666 }

#let o = {  666 /*
   comments
    */  }

#let o = {  /*
   comments
    */ 666 }

#let o = { 666
   /* comments

  123  */
}

#let o = {
   /*       comments

    */ 666
}

#let o = {   /*
comments     */
666 }

#let o = {  666 /*

comments */
}
