tests/snapshots/assets__check_file@unit-code-short-block.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/short-block.typ
snapshot_kind: text
---
#let o = { }

#let o = { }

#let o = { }

#let o = { }

#let o = {
  true
}

#let b = {
  "114"
  "514"
}

#let c = { let x = 3 }

#let d = { let y = true }

#let d = {
  let y = true
  false
}

#let e = {
  let (x, y) = (foo.bar)(baz())
}
