tests/snapshots/assets__check_file@unit-code-short-block.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/short-block.typ
snapshot_kind: text
---
#let o = { }

#let o = { }

#let o = { }

#let o = { }

#let o = {
  true
}

#let b = {
  "114"
  "514"
}

#let c = { let x = 3 }

#let d = { let y = true }

#let d = {
  let y = true
  false
}

#let e = { let (x, y) = (foo.bar)(baz()) }
