tests/snapshots/assets__check_file@unit-code-short-if.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/short-if.typ
snapshot_kind: text
---
#table(
  fill: (
    x,
    y,
  ) => if y
    == 0 {
    white.darken(15%)
  } else {
    none
  },
  align: (
    x,
    y,
  ) => if y
    == 0 {
    center
  } else {
    horizon
  },
  [Hi],
  [there],
)

#if true {
  [a]
} else [
  bbb
]

#let a = if true {
  0
} else {
  1
}

#{
  if true {
    [a]
  } else [
    bbb
  ]
}
