tests/snapshots/assets__check_file@unit-code-short-if.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/short-if.typ
---
#table(
  fill: (x, y) => if y == 0 {
    white.darken(15%)
  } else { none },
  align: (x, y) => if y == 0 {
    center
  } else { horizon },
  [Hi],
  [there],
)
